--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p class="text-center text-xs">
        SUNTIK SOSMED
       </p>
-      <a class="bg-green-500 text-white rounded-full px-9 py-0 mt-0 w-full" href="t.me/nana7777777uu">
+      <a class="bg-green-500 text-white rounded-full px-9 py-0 mt-0 w-full" href="https://t.me/nana7777777uu">
        beli
       </a>
      </div>
